--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^8.19.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-dist": "^5.29.3",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
